--- a/quem_somos.html
+++ b/quem_somos.html
@@ -53,32 +53,20 @@
         <section class="valores">
             <div class="valor-item">
                 <img src="" alt="Visão">
-                <h4>Visão</h4>
-<<<<<<< HEAD
+                <h4 class="valor-title">Visão</h4>
                 <p>Sabemos que as mandalas são mais do que simples figuras geométricas. Elas são artes com propósito. São portais para o autoconhecimento auxiliando na transformação pessoal.</p>
-=======
-                <p>As mandalas e os símbolos trazem arquétipos que provocam mudança interna. Na visão artística a ideia não é alcançar a perfeição, mas uma conexão em toda totalidade.<br> Ao admirar uma mandala, observe o que o inconsciente  te faz alcançar  internacionalmente. Na visão de Carl Jung,  sempre desenhava uma nova mandala e defendia que a configuração atual indicava o seu momento interno.</p>
->>>>>>> bf0d7c53b2823b3373ca7830e2b32db22acfbe47
             </div>
             <div class="valor-item">
                 <img src="" alt="Missão">
-                <h4>Missão</h4>
-<<<<<<< HEAD
+                <h4 class="valor-title">Missão</h4>
                 <p>As mandalas e os símbolos trazem arquétipos que provocam mudança interna. Na visão artística a ideia não é alcançar a perfeição, mas uma conexão em toda totalidade.
                     Ao admirar uma mandala, observe o que o inconsciente  te faz alcançar  internacionalmente. Na visão de Carl Jung,  sempre desenhava uma nova mandala e defendia que a configuração atual indicava o seu momento interno.</p>
-=======
-                <p>Sabemos que as mandalas são mais do que simples figuras geométricas. Elas são artes com propósito. São portais para o autoconhecimento auxiliando na transformação pessoal.</p>
->>>>>>> bf0d7c53b2823b3373ca7830e2b32db22acfbe47
             </div>
             <div class="valor-item">
                 <img src="" alt="Valores">
-                <h4>Valores</h4>
-<<<<<<< HEAD
+                <h4 class="valor-title">Valores</h4>
                 <p>Existe uma diferença entre valor e preço nessa arte manual.
                     A arte com mandalas faz entender que é um trabalho  com diferença nos seus preços. Cada arte é única e 100% artesanal. Assim priorizando e trazendo um resultado satisfatório para cada cliente.</p>
-=======
-                <p>Cada arte é única e 100% artesanal.</p>
->>>>>>> bf0d7c53b2823b3373ca7830e2b32db22acfbe47
             </div>
         </section>
     </main>
