--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <p><strong>- Lu Phellipo</strong></p>
             </div>
             <div>
-                <img class="img-sobre" src="img/fases_lua.png" alt="">
+                <img class="img-sobre" src="img/fases_lua.png" alt="mandala fases da lua">
             </div>
 <br>
         </div>
