--- a/contate_nos.html
+++ b/contate_nos.html
@@ -35,7 +35,7 @@
         <nain>
     <p class="mainTitle">PEDIDOS NO ATACADO! <br> Dúvidas ou problemas na compra?</p>
     <div class="botao">
-        <button class="redirecionar">Entre em contato</button>
+        <button class="redirecionar" href="https://wa.me/message/XZSMPP7IUPNUP1"s>Entre em contato</button>
     </div>
 </nain>
 <footer>
