--- a/galeria.html
+++ b/galeria.html
@@ -11,6 +11,15 @@
         .swal2-popup {
             font-family: 'Inter', sans-serif;
         }
+
+        .grid-produtos {
+            display: flex;
+            gap: 17px;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 73px;
+            flex-wrap: wrap;
+        }
     </style>
 </head>
 
@@ -32,7 +41,7 @@
             <img src="/img/SL.jpg" alt="foto-mandala">
             <div class="text-overlay">Produtos</div>
         </div>
-        <article class="grind-produtos">
+        <article class="grid-produtos">
             <div>
                 <figure class="card">
                     <img class="card-img" src="img/amarela_azul.png" alt="mandala amarela e azul">
@@ -115,7 +124,8 @@
         <div class="legenda-footer">
             <h4>Por Luciana Phellipo - Artista Plástica </h4>
             <br>
-            <p><a class="redirecionar" href="https://www.flaticon.com/br/icones-gratis/mandala" title="mandala ícones">Favicon criado por Freepik - Flaticon</a></p>      
+            <p><a class="redirecionar" href="https://www.flaticon.com/br/icones-gratis/mandala"
+                    title="mandala ícones">Favicon criado por Freepik - Flaticon</a></p>
         </div>
     </footer>
 
