--- a/quem_somos.html
+++ b/quem_somos.html
@@ -31,7 +31,7 @@
             <img src="/img/SL.jpg" alt="foto-mandala" >
             <div class="text-overlay">Quem somos</div>
         </div>
-        <section class="sobre">
+        <section class="sobre" style="gap: 100px;">
             <img src="/img/foto_perfil.jpg" alt="Luciana Phellipo segurando uma mandala" class="img-sobre">
             <div class="sobre-texto">
                 <h3 class="titulo-quem-sou-eu">Quem sou eu?</h3>
@@ -50,7 +50,7 @@
             </div>
         </section>
 
-        <section class="valores">
+        <section class="valores" style="gap: 100px;">
             <div class="valor-item">
                 <h4 class="valor-title">Visão</h4>
                 <p>Sabemos que as mandalas são mais do que simples figuras geométricas. Elas são artes com propósito. São portais para o autoconhecimento auxiliando na transformação pessoal.</p>
